# vera-bench

./: .coderabbit.yaml  .gitignore  AILANG_MAPPING.md  AILANG_RESULTS.md  CHANGELOG.md  CITATION.cff  README.md  ROADMAP.md  pyproject.toml
scripts/: README.md  plot_results.py  plot_slide.py  run_full_benchmark.py
solutions/ailang/: VB_T1_001_absolute_value.ail  VB_T1_002_clamp.ail  VB_T1_003_signum.ail  VB_T1_004_max_of_two.ail  VB_T1_005_min_of_two.ail  VB_T1_006_is_positive.ail  VB_T1_007_safe_modulo.ail  VB_T1_008_distance.ail  VB_T1_009_max_of_three.ail  VB_T1_010_double_or_nothing.ail  VB_T2_001_sum_array.ail  VB_T2_002_filter_positives.ail  VB_T2_003_greeting.ail  VB_T2_004_is_empty_string.ail  VB_T2_005_contains_substring.ail  VB_T2_006_join_strings.ail  VB_T2_007_double_elements.ail  VB_T2_008_count_positives.ail  VB_T2_009_to_upper.ail  VB_T2_010_sum_positives.ail  VB_T2_011_starts_with_prefix.ail  VB_T2_012_ends_with_suffix.ail  VB_T2_013_get_char_code.ail  VB_T2_014_combined_length.ail  VB_T2_015_is_longer_than.ail  VB_T3_001_list_length.ail  VB_T3_002_tree_depth.ail  VB_T3_003_expression_evaluator.ail  VB_T3_004_list_sum.ail  VB_T3_005_tree_sum.ail  VB_T3_006_option_unwrap_or.ail  VB_T3_007_list_contains.ail  VB_T3_008_tree_count_leaves.ail  VB_T3_009_list_append.ail  VB_T3_010_list_last.ail  VB_T3_011_safe_divide.ail  VB_T3_012_pair_sum.ail  VB_T3_013_classify_sign.ail  VB_T3_014_color_code.ail  VB_T3_015_either_select.ail  (+20 more)
tests/: test_baseline.py  test_models.py  test_runner.py
vera_bench/: baseline_runner.py  cli.py  models.py  prompts.py  runner.py
(+59 files in other folders)
